# hiveos-pleb-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: args.rs  main.rs  ops.rs
src/args/: account_args.rs  farm_args.rs  flight_sheet_args.rs  overclock_args.rs  wallet_args.rs  worker_args.rs
src/ops/: account_ops.rs  farm_ops.rs  flight_sheet_ops.rs  overclock_ops.rs  wallet_ops.rs  worker_ops.rs
